2009.10.12: David Nichols
	* updated XmlReader methods to throw exceptions on XML parsing errors
	  to be consistent with other methods
	* updated sending HTTP headers to send a single header multiple times
	  if the value is a list

2009.10.10: David Nichols
	* fixed compiling on systems without xmlTextReaderSchemaValidate()

2009.10.09: David Nichols
	* implemented case == <exp> for soft matches in case expressions

2009.10.08: David Nichols
	* updated internal XML APIs; updated XmlReader class; documented
	  XmlReader class
	* if an HTTP header is received more than once, then make the value a
	  list in the hash returned
	* documented decode_url()
	* added information about informational headers returned by
	  QoreSocket::readHTTPHeader()

2009.10.06: David Nichols
	* fixed a potential race condition in calling QoreClass::numMethods()
	  and QoreClass::numStaticMethods() (C++ functions)
	* added QoreClass::numUserMethods() and
	  QoreClass::numStaticUserMethods() (C++ functions)
	* fixed an XML-RPC parsing bug due to a side-effect in a debugging 
	  statement
	* added XML node type constants and NodeTypeMap constant hash

2009.10.05: David Nichols
	* updated configure to check for more required features of libxml2
	* updated configure to check for minimum libxml2 version 2.6.0

2009.10.04: David Nichols
	* fixed a bug setting the character encoding in strings produced with
	  makeXMLFragment() and makeFormattedXMLFragment() when the default
	  character encoding is not UTF8
	* more XML cleanups and added XmlReader class
	* implemented parseXMLWithRelaxNG() and parseXMLAsDataWithRelaxNG()
	* implemented XmlDoc::validateRelaxNG() and XmlDoc::ValidateSchema()
	* implemented many XmlReader methods
	* implemented HAVE_PARSEXMLWITHRELAXNG constant and Qore library
	  option; added configure checks for new libxml2 options

2009.10.03: David Nichols
	* added support for system objects using the new object method calling
	  convention